--- a/MVC projekt Peole kutsumine/Views/Home/Index.cshtml
+++ b/MVC projekt Peole kutsumine/Views/Home/Index.cshtml
@@ -1,49 +1,71 @@
 ﻿@{
-    ViewBag.Title = "Tere Tulemast peole!";
-
+    ViewBag.Title = "Tere tulemast peole!";
 }
 
-<div class="jumbotron">
-    <h1> @ViewBag.Greeting , Kallis sõber! </h1>
-</div>
-
-<div>
-    @ViewBag.Message
-    <img scr="~/Images/kutse.jpg" />
-
-</div>
-
-<div>
-
-    @Html.ActionLink("Vastan", "Ankeet", "Ankeet", new { @class = "btn btn-primary" })
-</div>
-
-<main>
-    <section class="row" aria-labelledby="aspnetTitle">
-        <h1 id="title">ASP.NET</h1>
-        <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-        <p><a href="https://asp.net" class="btn btn-primary btn-md">Learn more &raquo;</a></p>
-    </section>
-
-    <div class="row">
-        <section class="col-md-4" aria-labelledby="gettingStartedTitle">
-            <h2 id="gettingStartedTitle">Getting started</h2>
-            <p>
-                ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-                enables a clean separation of concerns and gives you full control over markup
-                for enjoyable, agile development.
-            </p>
-            <p><a class="btn btn-outline-dark" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-        </section>
-        <section class="col-md-4" aria-labelledby="librariesTitle">
-            <h2 id="librariesTitle">Get more libraries</h2>
-            <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-            <p><a class="btn btn-outline-dark" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-        </section>
-        <section class="col-md-4" aria-labelledby="hostingTitle">
-            <h2 id="hostingTitle">Web Hosting</h2>
-            <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-            <p><a class="btn btn-outline-dark" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-        </section>
+<!DOCTYPE html>
+<html lang="et">
+<head>
+    <meta charset="UTF-8" />
+    <title>@ViewBag.Title</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: LightCyan;
+        }
+        .jumbotron {
+            background-color: MediumTurquoise;
+            color: white;
+            text-align: center;
+            padding: 30px;
+            border-radius: 60px;
+        }
+        .jumbotron h1 {
+            font-size: 35px; 
+            font-weight: bold; 
+            text-transform: uppercase; 
+            letter-spacing: 3px; 
+        }
+        .jumbotron2 {
+            font-size: 15px;
+            font-weight: bold;
+            letter-spacing: 3px;
+            color:black;
+        }
+        .message {
+            padding: 20px;
+            background-color: MintCream;
+            margin-top: 20px;
+            text-align: center;
+            border-radius: 30px;
+        }
+        .btn-primary {
+            background-color: #007bff;
+            border-color: #007bff;
+        }
+        .img {
+            width: 100%;
+            text-align: center;
+            height: auto;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <div class="jumbotron">
+            <h1>@ViewBag.Greeting, Kallis sõber!</h1>
+            <div class="jumbotron2">
+                <p>Olete oodatud meie üritusele! Õhtul saab olema palju huvitavat!</p>
+            </div>
+        </div>
+        <div class="message">
+            <p>@ViewBag.Message</p>
+        </div>
+        <div class="img">
+            <img src="~/Images/kutse.jpg" alt="Kutset pilt" />
+        </div>
+        <div class="text-center">
+            @Html.ActionLink("Vastan", "Ankeet", "Ankeet", new { @class = "btn btn-primary" })
+        </div>
     </div>
-</main>
+</body>
+</html>
