--- a/MVC projekt Peole kutsumine/Views/Home/Thanks.cshtml
+++ b/MVC projekt Peole kutsumine/Views/Home/Thanks.cshtml
@@ -13,15 +13,26 @@
     {
         @:Ootame sind kallis sõber!
         <p>
+            <br />
             <img src="~/Images/kutse.jpg" />
         </p>
+        using (Html.BeginForm("Meeldetuletus", "Home", FormMethod.Post))
+        {
+            @Html.HiddenFor(m => m.Name)
+            @Html.HiddenFor(m => m.Email)
+            @Html.HiddenFor(m => m.Phone)
+            @Html.HiddenFor(m => m.WillAttend)
+            <input type="submit" value="Meeldetuletus" name="Meeldetuletus" />
+        }
     }
     else
     {
         @:Väga kurb uudis. Näeme hiljem!
         <p>
-            <img src="~/Images/kutse.jpg" />
+            <br />
+            <img src="~/Images/kutse2.jpg" />
         </p>
     }
+    <br />
     @ViewBag.Message @*ViewBag.Message - отчет об отправке письма с приглашением*@
-</div>
+</div> 
