--- a/MVC projekt Peole kutsumine/Views/Home/Index.cshtml
+++ b/MVC projekt Peole kutsumine/Views/Home/Index.cshtml
@@ -12,6 +12,13 @@
             font-family: 'Arial', sans-serif;
             background-color: LightCyan;
         }
+
+        .container {
+            max-width: 100%;
+            margin: 0 auto;
+            padding-top: 50px;
+        }
+
         .jumbotron {
             background-color: MediumTurquoise;
             color: white;
@@ -19,18 +26,21 @@
             padding: 30px;
             border-radius: 60px;
         }
-        .jumbotron h1 {
-            font-size: 35px; 
-            font-weight: bold; 
-            text-transform: uppercase; 
-            letter-spacing: 3px; 
-        }
+
+            .jumbotron h1 {
+                font-size: 35px;
+                font-weight: bold;
+                text-transform: uppercase;
+                letter-spacing: 3px;
+            }
+
         .jumbotron2 {
             font-size: 15px;
             font-weight: bold;
             letter-spacing: 3px;
-            color:black;
+            color: black;
         }
+
         .message {
             padding: 20px;
             background-color: MintCream;
@@ -38,14 +48,21 @@
             text-align: center;
             border-radius: 30px;
         }
+
         .btn-primary {
             background-color: #007bff;
             border-color: #007bff;
         }
+
         .img {
             width: 100%;
             text-align: center;
             height: auto;
+        } 
+        .img img {
+            width: 50%;
+            height: auto;
+            border-radius: 30px;
         }
     </style>
 </head>
@@ -57,12 +74,32 @@
                 <p>Olete oodatud meie üritusele! Õhtul saab olema palju huvitavat!</p>
             </div>
         </div>
-        <div class="message">
-            <p>@ViewBag.Message</p>
-        </div>
-        <div class="img">
-            <img src="~/Images/kutse.jpg" alt="Kutset pilt" />
-        </div>
+
+        @if (ViewBag.Message != null)
+        {
+            <div class="message">
+                <p>@ViewBag.Message</p>
+            </div>
+        }
+        else
+        {
+            <div class="message">
+                <p>Teade puudub.</p>
+            </div>
+        }
+        @if (ViewBag.ImagePath != null)
+        {
+            <div class="img">
+                <img src="@Url.Content(ViewBag.ImagePath)" alt="Kutse pilt" />
+            </div>
+        }
+        @if (ViewBag.ImagePath == null && ViewBag.HolidayImage != null)
+        {
+            <div class="img">
+                <img src="@Url.Content(ViewBag.HolidayImage)" alt="Holiday Image" />
+            </div>
+        }
+
         <div class="text-center">
             @Html.ActionLink("Vastan", "Ankeet", "Ankeet", new { @class = "btn btn-primary" })
         </div>
